--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,1 @@
-<h1>Home Page</h1>
-
-<%= javascript_pack_tag 'application' %>
-<%= javascript_pack_tag 'hello_react' %>
+<%= javascript_pack_tag 'app' %>
