Massive Layout work: converting to Grid
- holy grail layout using grid
- styled components
- add a reset.css to the sprockets section (may want to revisit that)
- two sided top nav with flexbox
- three column footer with flexbox
- left and right sidebars
- streamlined main App

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
   <head>
     <title>R5apiReactStarter</title>
     <%= csrf_meta_tags %>
+    <%= stylesheet_link_tag 'reset' %>
   </head>
   <body>
     <%= yield %>
