nicer navbar colour

--- a/app/assets/stylesheets/reset.css
+++ b/app/assets/stylesheets/reset.css
@@ -1,18 +1,21 @@
+/* global */
+* {box-sizing: border-box; font-family: "Helvetica Neue", Helvetica, sans-serif; font-size: 18px;}
+
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {margin: 0; padding: 0; border: 0; font-size: 100%; font: inherit; vertical-align: baseline;}
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {margin: 0; padding: 0; border: 0; font-size: 100%; vertical-align: baseline;}
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {display: block;}
-body {line-height: 1;}
+body {line-height: 1.2;}
 ol, ul {list-style: none;}
 blockquote, q {quotes: none;}
 blockquote:before, blockquote:after,q:before, q:after {content: '';	content: none;}
 table {	border-collapse: collapse;	border-spacing: 0;}
 
-/* undo some reset */
+/* elements */
 h1,h2,h3,h4,h5,h6 { margin-top: 1.5em; font-weight: bold; font-family: sans-serif; }
 /* except when it's first in a block */
 h1:first-child,h2:first-child,h3:first-child,h4:first-child,h5:first-child,h6:first-child { margin-top: 0;}
@@ -22,14 +25,13 @@ h3{font-size: 1.2em;}
 h4{font-size: 1.1em;}
 h5{font-size: 1em;}
 h6{font-size: 0.8em;}
-p,blockquote {margin-top: 1em;}
 p:last-child {margin-bottom: 1em;}
+
+/* components */
+p,blockquote {margin-top: 1em;}
 ul.bullets {list-style: disc; margin-left: 1.2em; }
 ol.decimal {list-style: decimal; margin-left: 1.2em; }
 ol.lower-latin {list-style: lower-latin; margin-left: 1.2em; }
 ol.upper-latin {list-style: upper-latin; margin-left: 1.2em; }
 ol.lower-roman {list-style: lower-roman; margin-left: 1.2em; }
 ol.upper-roman {list-style: upper-roman; margin-left: 1.2emj; }
-ul.nav {list-style: none; }
-ul.nav > li {display: inline-block; margin-right: 2em; } /* should do this with flexbox */
-ul.nav > li:first-child {display: inline-block; margin-left: 2em; margin-right: 2em; } /* should do this with flexbox */
